switch to java 17, fixes #3971 (#3972)
* Update java version to java 17, fixes #3971

* Update github actions java version

* update rat plugin